--- a/guide.html
+++ b/guide.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Complete Shadow Priest guide for MoP Classic — talents, rotation, gear, glyphs, enchants, professions & boss tips by skimmynz.">
   <meta name="keywords" content="shadow priest, guide, MoP Classic, talents, rotation, gear, BiS, glyphs, World of Warcraft, skimmynz">
 
-  <title>Guide | skimmynz</title>
+  <title>MOP PVE Guide | skimmynz</title>
 
   <link rel="icon" type="image/png" sizes="32x32" href="/32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/16.png">
@@ -41,13 +41,13 @@
           </a>
         </li>
         <li>
-          <a href="/rankings.html">
+          <a href="/rankings">
             <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="8.5" cy="7" r="4"/><polyline points="17 11 19 13 23 9"/></svg>
             Rankings
           </a>
         </li>
         <li>
-          <a href="/guide" class="active">
+          <a href="https://skimmynz.com/guide" class="active">
             <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/><path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/></svg>
             Guide
           </a>
@@ -138,9 +138,9 @@
           <div class="talent-tier-row">
             <span class="talent-tier-label">15</span>
             <div class="talent-tier-icons">
-              <a href="https://www.wowhead.com/mop-classic/spell=108920" class="talent-cell active"><img src="https://assets.rpglogs.com/img/warcraft/abilities/spell_priest_voidtendrils.jpg" alt="Void Tendrils"></a>
-              <a href="https://www.wowhead.com/mop-classic/spell=108921" class="talent-cell"><img src="https://assets.rpglogs.com/img/warcraft/abilities/spell_priest_psyfiend.jpg" alt="Psyfiend"></a>
-              <a href="https://www.wowhead.com/mop-classic/spell=605" class="talent-cell"><img src="https://assets.rpglogs.com/img/warcraft/abilities/spell_shadow_shadowworddominate.jpg" alt="Dominate Mind"></a>
+              <a href="https://www.wowhead.com/mop-classic/spell=108920" class="talent-cell active"><img loading="lazy" src="https://assets.rpglogs.com/img/warcraft/abilities/spell_priest_voidtendrils.jpg" alt="Void Tendrils"></a>
+              <a href="https://www.wowhead.com/mop-classic/spell=108921" class="talent-cell"><img loading="lazy" src="https://assets.rpglogs.com/img/warcraft/abilities/spell_priest_psyfiend.jpg" alt="Psyfiend"></a>
+              <a href="https://www.wowhead.com/mop-classic/spell=605" class="talent-cell"><img loading="lazy" src="https://assets.rpglogs.com/img/warcraft/abilities/spell_shadow_shadowworddominate.jpg" alt="Dominate Mind"></a>
             </div>
             <div class="talent-tier-text">
               <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop-classic/spell=108920">Void Tendrils</a></strong>
@@ -151,9 +151,9 @@
           <div class="talent-tier-row">
             <span class="talent-tier-label">30</span>
             <div class="talent-tier-icons">
-              <a href="https://www.wowhead.com/mop-classic/spell=64129" class="talent-cell"><img src="https://assets.rpglogs.com/img/warcraft/abilities/spell_holy_symbolofhope.jpg" alt="Body and Soul"></a>
-              <a href="https://www.wowhead.com/mop-classic/spell=121536" class="talent-cell active"><img src="https://assets.rpglogs.com/img/warcraft/abilities/ability_priest_angelicfeather.jpg" alt="Angelic Feather"></a>
-              <a href="https://www.wowhead.com/mop-classic/spell=108942" class="talent-cell"><img src="https://assets.rpglogs.com/img/warcraft/abilities/ability_priest_phantasm.jpg" alt="Phantasm"></a>
+              <a href="https://www.wowhead.com/mop-classic/spell=64129" class="talent-cell"><img loading="lazy" src="https://assets.rpglogs.com/img/warcraft/abilities/spell_holy_symbolofhope.jpg" alt="Body and Soul"></a>
+              <a href="https://www.wowhead.com/mop-classic/spell=121536" class="talent-cell active"><img loading="lazy" src="https://assets.rpglogs.com/img/warcraft/abilities/ability_priest_angelicfeather.jpg" alt="Angelic Feather"></a>
+              <a href="https://www.wowhead.com/mop-classic/spell=108942" class="talent-cell"><img loading="lazy" src="https://assets.rpglogs.com/img/warcraft/abilities/ability_priest_phantasm.jpg" alt="Phantasm"></a>
             </div>
             <div class="talent-tier-text">
               <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop-classic/spell=121536">Angelic Feather</a></strong>
@@ -164,9 +164,9 @@
           <div class="talent-tier-row">
             <span class="talent-tier-label">45</span>
             <div class="talent-tier-icons">
-              <a href="https://www.wowhead.com/mop-classic/spell=109186" class="talent-cell"><img src="https://assets.rpglogs.com/img/warcraft/abilities/spell_holy_surgeoflight.jpg" alt="From Darkness, Comes Light"></a>
-              <a href="https://www.wowhead.com/mop-classic/spell=123040" class="talent-cell"><img src="https://assets.rpglogs.com/img/warcraft/abilities/spell_shadow_soulleech_3.jpg" alt="Mindbender"></a>
-              <a href="https://www.wowhead.com/mop-classic/spell=129250" class="talent-cell active"><img src="https://assets.rpglogs.com/img/warcraft/abilities/ability_priest_flashoflight.jpg" alt="Solace and Insanity"></a>
+              <a href="https://www.wowhead.com/mop-classic/spell=109186" class="talent-cell"><img loading="lazy" src="https://assets.rpglogs.com/img/warcraft/abilities/spell_holy_surgeoflight.jpg" alt="From Darkness, Comes Light"></a>
+              <a href="https://www.wowhead.com/mop-classic/spell=123040" class="talent-cell"><img loading="lazy" src="https://assets.rpglogs.com/img/warcraft/abilities/spell_shadow_soulleech_3.jpg" alt="Mindbender"></a>
+              <a href="https://www.wowhead.com/mop-classic/spell=129250" class="talent-cell active"><img loading="lazy" src="https://assets.rpglogs.com/img/warcraft/abilities/ability_priest_flashoflight.jpg" alt="Solace and Insanity"></a>
             </div>
             <div class="talent-tier-text">
               <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop-classic/spell=129250">Solace and Insanity</a></strong>
@@ -177,9 +177,9 @@
           <div class="talent-tier-row">
             <span class="talent-tier-label">60</span>
             <div class="talent-tier-icons">
-              <a href="https://www.wowhead.com/mop-classic/spell=19236" class="talent-cell"><img src="https://assets.rpglogs.com/img/warcraft/abilities/spell_holy_testoffaith.jpg" alt="Desperate Prayer"></a>
-              <a href="https://www.wowhead.com/mop-classic/spell=112833" class="talent-cell"><img src="https://assets.rpglogs.com/img/warcraft/abilities/spell_priest_spectralguise.jpg" alt="Spectral Guise"></a>
-              <a href="https://www.wowhead.com/mop-classic/spell=108945" class="talent-cell active"><img src="https://assets.rpglogs.com/img/warcraft/abilities/ability_priest_angelicbulwark.jpg" alt="Angelic Bulwark"></a>
+              <a href="https://www.wowhead.com/mop-classic/spell=19236" class="talent-cell"><img loading="lazy" src="https://assets.rpglogs.com/img/warcraft/abilities/spell_holy_testoffaith.jpg" alt="Desperate Prayer"></a>
+              <a href="https://www.wowhead.com/mop-classic/spell=112833" class="talent-cell"><img loading="lazy" src="https://assets.rpglogs.com/img/warcraft/abilities/spell_priest_spectralguise.jpg" alt="Spectral Guise"></a>
+              <a href="https://www.wowhead.com/mop-classic/spell=108945" class="talent-cell active"><img loading="lazy" src="https://assets.rpglogs.com/img/warcraft/abilities/ability_priest_angelicbulwark.jpg" alt="Angelic Bulwark"></a>
             </div>
             <div class="talent-tier-text">
               <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop-classic/spell=108945">Angelic Bulwark</a></strong>
@@ -190,9 +190,9 @@
           <div class="talent-tier-row">
             <span class="talent-tier-label">75</span>
             <div class="talent-tier-icons">
-              <a href="https://www.wowhead.com/mop-classic/spell=109142" class="talent-cell active"><img src="https://assets.rpglogs.com/img/warcraft/abilities/spell_shadow_mindtwisting.jpg" alt="Twist of Fate"></a>
-              <a href="https://www.wowhead.com/mop-classic/spell=10060" class="talent-cell"><img src="https://assets.rpglogs.com/img/warcraft/abilities/spell_holy_powerinfusion.jpg" alt="Power Infusion"></a>
-              <a href="https://www.wowhead.com/mop-classic/spell=109175" class="talent-cell"><img src="https://assets.rpglogs.com/img/warcraft/abilities/spell_priest_burningwill.jpg" alt="Divine Insight"></a>
+              <a href="https://www.wowhead.com/mop-classic/spell=109142" class="talent-cell active"><img loading="lazy" src="https://assets.rpglogs.com/img/warcraft/abilities/spell_shadow_mindtwisting.jpg" alt="Twist of Fate"></a>
+              <a href="https://www.wowhead.com/mop-classic/spell=10060" class="talent-cell"><img loading="lazy" src="https://assets.rpglogs.com/img/warcraft/abilities/spell_holy_powerinfusion.jpg" alt="Power Infusion"></a>
+              <a href="https://www.wowhead.com/mop-classic/spell=109175" class="talent-cell"><img loading="lazy" src="https://assets.rpglogs.com/img/warcraft/abilities/spell_priest_burningwill.jpg" alt="Divine Insight"></a>
             </div>
             <div class="talent-tier-text">
               <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop-classic/spell=109142">Twist of Fate</a></strong>
@@ -203,9 +203,9 @@
           <div class="talent-tier-row">
             <span class="talent-tier-label">90</span>
             <div class="talent-tier-icons">
-              <a href="https://www.wowhead.com/mop-classic/spell=121135" class="talent-cell"><img src="https://assets.rpglogs.com/img/warcraft/abilities/ability_priest_cascade.jpg" alt="Cascade"></a>
-              <a href="https://www.wowhead.com/mop-classic/spell=110744" class="talent-cell"><img src="https://assets.rpglogs.com/img/warcraft/abilities/spell_priest_divinestar.jpg" alt="Divine Star"></a>
-              <a href="https://www.wowhead.com/mop-classic/spell=120517" class="talent-cell active"><img src="https://assets.rpglogs.com/img/warcraft/abilities/ability_priest_halo.jpg" alt="Halo"></a>
+              <a href="https://www.wowhead.com/mop-classic/spell=121135" class="talent-cell"><img loading="lazy" src="https://assets.rpglogs.com/img/warcraft/abilities/ability_priest_cascade.jpg" alt="Cascade"></a>
+              <a href="https://www.wowhead.com/mop-classic/spell=110744" class="talent-cell"><img loading="lazy" src="https://assets.rpglogs.com/img/warcraft/abilities/spell_priest_divinestar.jpg" alt="Divine Star"></a>
+              <a href="https://www.wowhead.com/mop-classic/spell=120517" class="talent-cell active"><img loading="lazy" src="https://assets.rpglogs.com/img/warcraft/abilities/ability_priest_halo.jpg" alt="Halo"></a>
             </div>
             <div class="talent-tier-text">
               <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a></strong>
@@ -412,7 +412,7 @@
         <h3 class="boss-wing-label">Last Stand of the Zandalari</h3>
         <div class="boss-accordion">
           <button class="boss-accordion-header active" data-boss="jinrokh">
-            <img class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1577-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1577-icon.jpg" alt="">
             <span class="boss-accordion-name">Jin'rokh the Breaker</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
@@ -428,7 +428,7 @@
         </div>
         <div class="boss-accordion">
           <button class="boss-accordion-header" data-boss="horridon">
-            <img class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1575-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1575-icon.jpg" alt="">
             <span class="boss-accordion-name">Horridon</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
@@ -444,7 +444,7 @@
         </div>
         <div class="boss-accordion">
           <button class="boss-accordion-header" data-boss="council">
-            <img class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1570-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1570-icon.jpg" alt="">
             <span class="boss-accordion-name">Council of Elders</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
@@ -462,7 +462,7 @@
         <h3 class="boss-wing-label">Forgotten Depths</h3>
         <div class="boss-accordion">
           <button class="boss-accordion-header" data-boss="tortos">
-            <img class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1565-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1565-icon.jpg" alt="">
             <span class="boss-accordion-name">Tortos</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
@@ -477,7 +477,7 @@
         </div>
         <div class="boss-accordion">
           <button class="boss-accordion-header" data-boss="megaera">
-            <img class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1578-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1578-icon.jpg" alt="">
             <span class="boss-accordion-name">Megaera</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
@@ -492,7 +492,7 @@
         </div>
         <div class="boss-accordion">
           <button class="boss-accordion-header" data-boss="jikun">
-            <img class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1573-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1573-icon.jpg" alt="">
             <span class="boss-accordion-name">Ji-Kun</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
@@ -510,7 +510,7 @@
         <h3 class="boss-wing-label">Halls of Flesh-Shaping</h3>
         <div class="boss-accordion">
           <button class="boss-accordion-header" data-boss="durumu">
-            <img class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1572-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1572-icon.jpg" alt="">
             <span class="boss-accordion-name">Durumu the Forgotten</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
@@ -524,7 +524,7 @@
         </div>
         <div class="boss-accordion">
           <button class="boss-accordion-header" data-boss="primordius">
-            <img class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1574-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1574-icon.jpg" alt="">
             <span class="boss-accordion-name">Primordius</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
@@ -539,7 +539,7 @@
         </div>
         <div class="boss-accordion">
           <button class="boss-accordion-header" data-boss="darkanimus">
-            <img class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1576-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1576-icon.jpg" alt="">
             <span class="boss-accordion-name">Dark Animus</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
@@ -557,7 +557,7 @@
         <h3 class="boss-wing-label">Pinnacle of Storms</h3>
         <div class="boss-accordion">
           <button class="boss-accordion-header" data-boss="ironqon">
-            <img class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1559-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1559-icon.jpg" alt="">
             <span class="boss-accordion-name">Iron Qon</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
@@ -572,7 +572,7 @@
         </div>
         <div class="boss-accordion">
           <button class="boss-accordion-header" data-boss="consorts">
-            <img class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1560-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1560-icon.jpg" alt="">
             <span class="boss-accordion-name">Twin Empyreans</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
@@ -588,7 +588,7 @@
         </div>
         <div class="boss-accordion">
           <button class="boss-accordion-header" data-boss="leishen">
-            <img class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1579-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1579-icon.jpg" alt="">
             <span class="boss-accordion-name">Lei Shen</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
@@ -603,7 +603,7 @@
         </div>
         <div class="boss-accordion">
           <button class="boss-accordion-header" data-boss="raden">
-            <img class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1580-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1580-icon.jpg" alt="">
             <span class="boss-accordion-name">Ra-den</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
