--- a/haste.html
+++ b/haste.html
@@ -51,7 +51,7 @@
           </a>
         </li>
         <li>
-          <a href="/rankings.html">
+          <a href="/rankings">
             <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
               <circle cx="8.5" cy="7" r="4"/>
@@ -61,7 +61,7 @@
           </a>
         </li>
         <li>
-          <a href="https://www.youtube.com/watch?v=LH5aODSFQ1o">
+          <a href="https://skimmynz.com/guide">
             <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/>
               <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/>
