--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
           </a>
         </li>
         <li>
-          <a href="/rankings.html">
+          <a href="/rankings">
             <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="8.5" cy="7" r="4"/><polyline points="17 11 19 13 23 9"/></svg>
             Rankings
           </a>
         </li>
         <li>
-          <a href="https://www.youtube.com/watch?v=LH5aODSFQ1o" target="_blank" rel="noopener">
+          <a href="https://skimmynz.com/guide">
             <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/><path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/></svg>
             Guide
           </a>
@@ -113,7 +113,7 @@
       </div>
 
       <div class="hero-ctas">
-        <a href="/rankings.html" class="hero-cta hero-cta--pri">
+        <a href="/rankings" class="hero-cta hero-cta--pri">
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="17 11 19 13 23 9"/><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="8.5" cy="7" r="4"/></svg>
           Rankings
         </a>
@@ -125,7 +125,7 @@
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"/><line x1="9" y1="3" x2="9" y2="21"/></svg>
           Addons &amp; WAs
         </a>
-        <a href="https://www.youtube.com/watch?v=LH5aODSFQ1o" class="hero-cta hero-cta--sec" target="_blank" rel="noopener">
+        <a href="https://skimmynz.com/guide" class="hero-cta hero-cta--sec">
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/><path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/></svg>
           Guide
         </a>
