--- a/guide.html
+++ b/guide.html
@@ -47,7 +47,7 @@
           </a>
         </li>
         <li>
-          <a href="https://skimmynz.com/guide" class="active">
+          <a href="/guide" class="active">
             <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/><path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/></svg>
             Guide
           </a>
@@ -360,7 +360,7 @@
           <!-- T15 BiS -->
           <div class="stats-block">
             <h3 class="stats-block-heading">T15 BiS</h3>
-            <p class="stats-source">Source: <a href="https://www.wowsims.com/mop/priest/shadow/" target="_blank" rel="noopener"><img src="https://www.wowsims.com/assets/WoW-Simulator-Icon-0WxURMuu.png" alt="WoWSims" class="stats-source-icon">WowSims</a></p>
+            <p class="stats-source">Source: <a href="https://www.wowsims.com/mop/priest/shadow/" target="_blank" rel="noopener noreferrer"><img src="https://www.wowsims.com/assets/WoW-Simulator-Icon-0WxURMuu.png" alt="WoWSims" class="stats-source-icon">WowSims</a></p>
             <table class="stats-table">
               <thead>
                 <tr><th>Stat</th><th>Value</th><th></th></tr>
@@ -412,7 +412,7 @@
         <h3 class="boss-wing-label">Last Stand of the Zandalari</h3>
         <div class="boss-accordion">
           <button class="boss-accordion-header active" data-boss="jinrokh">
-            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1577-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1577-icon.jpg" alt="Jin'rokh the Breaker">
             <span class="boss-accordion-name">Jin'rokh the Breaker</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
@@ -428,7 +428,7 @@
         </div>
         <div class="boss-accordion">
           <button class="boss-accordion-header" data-boss="horridon">
-            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1575-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1575-icon.jpg" alt="Horridon">
             <span class="boss-accordion-name">Horridon</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
@@ -444,7 +444,7 @@
         </div>
         <div class="boss-accordion">
           <button class="boss-accordion-header" data-boss="council">
-            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1570-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1570-icon.jpg" alt="Council of Elders">
             <span class="boss-accordion-name">Council of Elders</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
@@ -462,7 +462,7 @@
         <h3 class="boss-wing-label">Forgotten Depths</h3>
         <div class="boss-accordion">
           <button class="boss-accordion-header" data-boss="tortos">
-            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1565-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1565-icon.jpg" alt="Tortos">
             <span class="boss-accordion-name">Tortos</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
@@ -477,7 +477,7 @@
         </div>
         <div class="boss-accordion">
           <button class="boss-accordion-header" data-boss="megaera">
-            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1578-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1578-icon.jpg" alt="Megaera">
             <span class="boss-accordion-name">Megaera</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
@@ -492,7 +492,7 @@
         </div>
         <div class="boss-accordion">
           <button class="boss-accordion-header" data-boss="jikun">
-            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1573-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1573-icon.jpg" alt="Ji-Kun">
             <span class="boss-accordion-name">Ji-Kun</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
@@ -510,7 +510,7 @@
         <h3 class="boss-wing-label">Halls of Flesh-Shaping</h3>
         <div class="boss-accordion">
           <button class="boss-accordion-header" data-boss="durumu">
-            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1572-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1572-icon.jpg" alt="Durumu the Forgotten">
             <span class="boss-accordion-name">Durumu the Forgotten</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
@@ -524,7 +524,7 @@
         </div>
         <div class="boss-accordion">
           <button class="boss-accordion-header" data-boss="primordius">
-            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1574-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1574-icon.jpg" alt="Primordius">
             <span class="boss-accordion-name">Primordius</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
@@ -539,7 +539,7 @@
         </div>
         <div class="boss-accordion">
           <button class="boss-accordion-header" data-boss="darkanimus">
-            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1576-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1576-icon.jpg" alt="Dark Animus">
             <span class="boss-accordion-name">Dark Animus</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
@@ -557,7 +557,7 @@
         <h3 class="boss-wing-label">Pinnacle of Storms</h3>
         <div class="boss-accordion">
           <button class="boss-accordion-header" data-boss="ironqon">
-            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1559-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1559-icon.jpg" alt="Iron Qon">
             <span class="boss-accordion-name">Iron Qon</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
@@ -572,7 +572,7 @@
         </div>
         <div class="boss-accordion">
           <button class="boss-accordion-header" data-boss="consorts">
-            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1560-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1560-icon.jpg" alt="Twin Empyreans">
             <span class="boss-accordion-name">Twin Empyreans</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
@@ -588,7 +588,7 @@
         </div>
         <div class="boss-accordion">
           <button class="boss-accordion-header" data-boss="leishen">
-            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1579-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1579-icon.jpg" alt="Lei Shen">
             <span class="boss-accordion-name">Lei Shen</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
@@ -603,7 +603,7 @@
         </div>
         <div class="boss-accordion">
           <button class="boss-accordion-header" data-boss="raden">
-            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1580-icon.jpg" alt="">
+            <img loading="lazy" class="boss-accordion-icon" src="https://assets.rpglogs.com/img/warcraft/bosses/1580-icon.jpg" alt="Ra-den">
             <span class="boss-accordion-name">Ra-den</span>
             <span class="boss-accordion-chevron">▾</span>
           </button>
