--- a/guide.html
+++ b/guide.html
@@ -322,7 +322,7 @@
 /targetenemy [noexists]
 /cast [stance] Shadow Word: Death; [nostance] Shadowform
 /cast Shadow Word: Death</code></pre>
-            <p class="macro-desc">Ensures you're in <a href="https://www.wowhead.com/mop-classic/spell=15473">Shadowform</a> before casting <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a>. Automatically retargets a new enemy if your current target is dead — useful for sniping low-health adds like <a href="https://www.wowhead.com/mop-classic/npc=69232/ball-lightning">Ball Lightning</a>.</p>
+            <p class="macro-desc">Ensures you're in <a href="https://www.wowhead.com/mop-classic/spell=15473">Shadowform</a> before casting <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a>. Automatically targets a new enemy if your current target is dead — useful for sniping low-health adds like <a href="https://www.wowhead.com/mop-classic/npc=69232/ball-lightning">Ball Lightning</a>.</p>
           </div>
           <div class="macro-card">
             <h3 class="macro-name">MOP</h3>
