--- a/guide.html
+++ b/guide.html
@@ -355,6 +355,18 @@
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/></svg>
           Stats
         </h2>
+        <div class="stats-priority">
+          <span class="stats-priority-label">Priority</span>
+          <span class="stats-priority-chain">
+            <span>Hit cap</span>
+            <span class="stats-priority-arrow">→</span>
+            <span>Haste</span>
+            <span class="stats-priority-arrow">→</span>
+            <span>Mastery</span>
+            <span class="stats-priority-arrow">→</span>
+            <span>Crit</span>
+          </span>
+        </div>
         <div class="stats-grid">
 
           <!-- T15 BiS -->
