--- a/guide.html
+++ b/guide.html
@@ -372,7 +372,6 @@
           <!-- T15 BiS -->
           <div class="stats-block">
             <h3 class="stats-block-heading">T15 BiS</h3>
-            <p class="stats-source">Source: <a href="https://www.wowsims.com/mop/priest/shadow/" target="_blank" rel="noopener noreferrer"><img src="https://www.wowsims.com/assets/WoW-Simulator-Icon-0WxURMuu.png" alt="WoWSims" class="stats-source-icon">WowSims</a></p>
             <table class="stats-table">
               <thead>
                 <tr><th>Stat</th><th>Value</th><th></th></tr>
@@ -385,6 +384,11 @@
               </tbody>
             </table>
             <p class="stats-note">Crit is intentionally low — <a href="https://www.wowhead.com/mop-classic/item=94524">Unerring Vision of Lei Shen</a> grants 100% crit chance on proc.</p>
+            <a href="https://www.wowsims.com/mop/priest/shadow/" target="_blank" rel="noopener noreferrer" class="stats-sim-cta">
+              <img src="https://www.wowsims.com/assets/WoW-Simulator-Icon-0WxURMuu.png" alt="" class="stats-source-icon">
+              Sim your gear on WowSims
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="13" height="13"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" y1="14" x2="21" y2="3"/></svg>
+            </a>
           </div>
 
           <!-- Stat Weights -->
