--- a/guide.html
+++ b/guide.html
@@ -355,61 +355,63 @@
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/></svg>
           Stats
         </h2>
-        <div class="stats-priority">
-          <span class="stats-priority-label">Priority</span>
-          <span class="stats-priority-chain">
-            <span>Hit cap</span>
-            <span class="stats-priority-arrow">→</span>
-            <span>Haste</span>
-            <span class="stats-priority-arrow">→</span>
-            <span>Mastery</span>
-            <span class="stats-priority-arrow">→</span>
-            <span>Crit</span>
-          </span>
-        </div>
-        <div class="stats-grid">
-
-          <!-- T15 BiS -->
-          <div class="stats-block">
-            <h3 class="stats-block-heading">T15 BiS</h3>
-            <table class="stats-table">
-              <thead>
-                <tr><th>Stat</th><th>Value</th><th></th></tr>
-              </thead>
-              <tbody>
-                <tr><td>Haste</td><td>15,294</td><td class="stats-pct">42.79%</td></tr>
-                <tr><td>Hit</td><td>5,123</td><td class="stats-pct">15.07%</td></tr>
-                <tr><td>Crit</td><td>3,545</td><td class="stats-pct">21.62%</td></tr>
-                <tr><td>Mastery</td><td>9,564</td><td class="stats-pct">43.09%</td></tr>
-              </tbody>
-            </table>
-            <p class="stats-note">Crit is intentionally low — <a href="https://www.wowhead.com/mop-classic/item=94524">Unerring Vision of Lei Shen</a> grants 100% crit chance on proc.</p>
-            <a href="https://www.wowsims.com/mop/priest/shadow/" target="_blank" rel="noopener noreferrer" class="stats-sim-cta">
-              <img src="https://www.wowsims.com/assets/WoW-Simulator-Icon-0WxURMuu.png" alt="" class="stats-source-icon">
-              Sim your gear on WowSims
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="13" height="13"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" y1="14" x2="21" y2="3"/></svg>
-            </a>
+        <div class="stats-card">
+          <div class="stats-priority">
+            <span class="stats-priority-label">Priority</span>
+            <span class="stats-priority-chain">
+              <span>Hit cap</span>
+              <span class="stats-priority-arrow">→</span>
+              <span>Haste</span>
+              <span class="stats-priority-arrow">→</span>
+              <span>Mastery</span>
+              <span class="stats-priority-arrow">→</span>
+              <span>Crit</span>
+            </span>
           </div>
+          <div class="stats-grid">
 
-          <!-- Stat Weights -->
-          <div class="stats-block">
-            <h3 class="stats-block-heading">Stat Weights (EP)</h3>
-            <table class="stats-table">
-              <thead>
-                <tr><th>Stat</th><th>EP Value</th></tr>
-              </thead>
-              <tbody>
-                <tr class="stats-row-highlight"><td>Intellect</td><td>1.00</td></tr>
-                <tr><td>Spell Power</td><td>0.98</td></tr>
-                <tr><td>Spirit</td><td>0.90</td></tr>
-                <tr><td>Hit</td><td>0.85</td></tr>
-                <tr><td>Haste</td><td>0.75</td></tr>
-                <tr><td>Mastery</td><td>0.51</td></tr>
-                <tr><td>Crit</td><td>0.49</td></tr>
-              </tbody>
-            </table>
+            <!-- T15 BiS -->
+            <div class="stats-block">
+              <h3 class="stats-block-heading">T15 BiS</h3>
+              <table class="stats-table">
+                <thead>
+                  <tr><th>Stat</th><th>Value</th><th></th></tr>
+                </thead>
+                <tbody>
+                  <tr><td>Haste</td><td>15,294</td><td class="stats-pct">42.79%</td></tr>
+                  <tr><td>Hit</td><td>5,123</td><td class="stats-pct">15.07%</td></tr>
+                  <tr><td>Crit</td><td>3,545</td><td class="stats-pct">21.62%</td></tr>
+                  <tr><td>Mastery</td><td>9,564</td><td class="stats-pct">43.09%</td></tr>
+                </tbody>
+              </table>
+              <p class="stats-note">Crit is intentionally low — <a href="https://www.wowhead.com/mop-classic/item=94524">Unerring Vision of Lei Shen</a> grants 100% crit chance on proc.</p>
+            </div>
+
+            <!-- Stat Weights -->
+            <div class="stats-block">
+              <h3 class="stats-block-heading">Stat Weights (EP)</h3>
+              <table class="stats-table">
+                <thead>
+                  <tr><th>Stat</th><th>EP Value</th></tr>
+                </thead>
+                <tbody>
+                  <tr class="stats-row-highlight"><td>Intellect</td><td>1.00</td></tr>
+                  <tr><td>Spell Power</td><td>0.98</td></tr>
+                  <tr><td>Spirit</td><td>0.90</td></tr>
+                  <tr><td>Hit</td><td>0.85</td></tr>
+                  <tr><td>Haste</td><td>0.75</td></tr>
+                  <tr><td>Mastery</td><td>0.51</td></tr>
+                  <tr><td>Crit</td><td>0.49</td></tr>
+                </tbody>
+              </table>
+            </div>
+
           </div>
-
+          <a href="https://www.wowsims.com/mop/priest/shadow/" target="_blank" rel="noopener noreferrer" class="stats-sim-cta">
+            <img src="https://www.wowsims.com/assets/WoW-Simulator-Icon-0WxURMuu.png" alt="" class="stats-source-icon">
+            Sim your gear on WowSims
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="13" height="13"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" y1="14" x2="21" y2="3"/></svg>
+          </a>
         </div>
       </div>
     </div>
