--- a/guide.html
+++ b/guide.html
@@ -385,6 +385,10 @@
                 </tbody>
               </table>
               <p class="stats-note">Crit is intentionally low — <a href="https://www.wowhead.com/mop-classic/item=94524">Unerring Vision of Lei Shen</a> grants 100% crit chance on proc.</p>
+              <a href="/haste?rating=15294" class="stats-haste-link">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="14" height="14"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/></svg>
+                Check haste breakpoints at 15,294
+              </a>
             </div>
 
             <!-- Stat Weights -->
