--- a/haste.html
+++ b/haste.html
@@ -201,7 +201,7 @@
         <section class="result-card" aria-live="polite">
           <div class="result-label">Effective Haste</div>
           <div class="result-value" id="hasteResult">5.00%</div>
-          <div class="conversion-text" id="conversionText">Base: 5% <a href="https://www.wowhead.com/mop-classic/spell=15473/shadowform" data-wowhead="spell=15473&domain=mop-classic" class="buff-tooltip-wrap">Shadowform</a></div>
+          <div class="conversion-text" id="conversionText">includes <img src="https://wow.zamimg.com/images/wow/icons/tiny/spell_shadow_shadowform.gif" alt="Shadowform" class="explainer-icon"> Shadowform</div>
           
           <!-- WeakAura Display -->
           <div class="weakaura-container">
